syntax = "proto3";

package msg;

option go_package = "./websocket;msg";

message WSMessage {
    string type = 1;
    bytes payload = 2;
}

message Auth {
    string token = 2;
}

message WSError {
    string error = 1;
}

message MousePosition {
    uint32 x = 1;
    uint32 y = 2;
    string room_id = 3;
}

message MousePositionUpdate {
    string user_id = 1;
    uint32 x = 2;
    uint32 y = 3;
}

message JoinRoom {
    string canvas_id = 1;
}

message JoinRoomSuccess {
    string canvas_id = 1;
    string user_id = 2;
    string conn_id = 3;
}
